--- a/css/styles.css
+++ b/css/styles.css
@@ -142,3 +142,31 @@ a.custom-card:hover {
 .error{
   border: 1px solid red;
 }
+.puntuacion {
+  position: relative;
+  overflow: hidden;
+  display: inline-block;
+  }
+
+  .puntuacion input {
+  position: absolute;
+  top: -100px;
+  }
+
+
+  .puntuacion label {
+  float: right;
+  color: #c1b8b8;
+  font-size: 30px; 
+  }
+
+  .puntuacion label:hover,
+  .puntuacion label:hover ~ label,
+  .puntuacion input:checked ~ label {
+  color:orange;
+  }
+  span{
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      font-weight: 400;
+      color: rgb(82, 82, 82);
+  }
